[workspace]
members = [
    "crates/rush-parser",
    "crates/rush-analyzer",
    "crates/rush-compiler-llvm",
    "crates/rush-ls",
    "crates/rush-compiler-wasm",
    "crates/rush-cli",
]
package.authors = ["RubixDev", "MikMuellerDev"]
package.edition = "2021"
package.license = "GPL-3.0-only"
package.repository = "https://github.com/rush-rs/rush.git"
