[workspace]
members = [
    "crates/rush-ls",
    "crates/rush-cli",
    "crates/rush-parser",
    "crates/rush-analyzer",
    "crates/rush-interpreter-tree",
    "crates/rush-interpreter-vm",
    "crates/rush-compiler-wasm",
    "crates/rush-compiler-llvm",
    "crates/rush-compiler-risc-v",
    "crates/rush-compiler-x86-64",
    "crates/rush-compiler-c",
]
package.authors = ["RubixDev", "MikMuellerDev"]
package.edition = "2021"
package.license = "GPL-3.0-only"
package.repository = "https://github.com/rush-rs/rush.git"
