[package]
name = "rush-analyzer"
version = "0.1.2"
authors.workspace = true
edition = "2021"
license.workspace = true
repository.workspace = true
description = "A semantic analyzer and type-annotator for the rush programming language"

[dependencies]
rush-parser = { path = "../rush-parser", version = "0.1.2" }
