[package]
name = "rush-cli"
version = "0.1.0"
authors.workspace = true
edition = "2021"
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.24", features = ["derive"] }
rush-analyzer = { version = "0.1.0", path = "../rush-analyzer" }
rush-compiler-llvm = { version = "0.1.0", path = "../rush-compiler-llvm" }
rush-compiler-risc-v = { version = "0.1.0", path = "../rush-compiler-risc-v" }
rush-compiler-wasm = { version = "0.1.0", path = "../rush-compiler-wasm" }
rush-interpreter-vm = { version = "0.1.0", path = "../rush-interpreter-vm" }
