[package]
name = "rush-interpreter-vm"
version = "0.1.0"
authors.workspace = true
edition = "2021"
license.workspace = true
repository.workspace = true
description = "A rush interpreter leveraging a micro-compiler alongside a VM for its runtime"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rush-analyzer = { version = "0.1.0", path = "../rush-analyzer" }
